--- a/smart-edu1/package.json
+++ b/smart-edu1/package.json
@@ -7,6 +7,10 @@
     "start": "next start -H 0.0.0.0",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "^20",
+    "npm": ">=10"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.2",
